- Kimono CMS is done - Extra features might be added - Working on AJAX - Security issues are still there. - Fix htmlentities against XSS - Fix session hijacking (idk how might ask Antwan)

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,15 @@
     height: 25vh !important;
     border-radius: 40% !important;
 }
+
+/* Home page pagination */
+.pager .active a {
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.pager .active a:hover {
+    background-color: #000000 !important;
+    color: #ffffff;
+}
+
